--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -7,15 +7,15 @@
 
 #newAnimal {
   display: block;
-  font-size: 22px;
+  font-size: 30px;
   font-family: sans-serif;
-  background: green;
+  background: #036608;
   color: white;
-  height: 150px;
-  width: 150px;
+  height: 200px;
+  width: 200px;
   border-radius: 50%
-
 }
+
 
 #header {
   background-size: cover;
@@ -29,39 +29,108 @@ p {
 
 }
 
-label {
-    font-size: 16px;
-  }
-
 select {
-  margin-left: 12px;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  background-color: green;
+  font-size: 22px;
+  font-family: sans-serif;
+  height: 70px;
+  color: white;
+  float: right;
   font-size: 20px;
 }
 
-p {
-  text-align: justify;
-  font-size: 12px;
-}
-li {
-  font-size: 16px;
+option {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  background-color: green;
+  font-size: 22px;
+  font-family: sans-serif;
+  height: 70px;
+  color: white;
+  float: right;
+  font-size: 20px;
 }
 
+.constrain {
+  height: 200px;
+}
 .btn-default {
+  display:block;
+  font-size: 22px;
   font-family: sans-serif;
-  padding: 22px;
-  width: 50 px;
-  height: 20px;
+  background: #036608;
+  color: white;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+
+}
+
+.info {
+  background-color: white;
+  height: 300px;
+  text-align: center;
+  margin-bottom: 25px;
+  border-bottom: 2px;
+  border-color: green;
+  padding-top: 50px;
+}
+
+.info2 {
+  background-color: white;
+  height: 250px;
+  margin-bottom: 10px;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+
+}
+
+.info2 h2 {
+  text-align: center;
+  font-size: 30px;
+  font-family: sans-serif;
+  color: green;
+}
+
+.info2 p {
+  text-align: center;
+  font-size: 18px;
+  font-family: sans-serif;
+  color: green;
+}
+.well {
+  background: #036608;
+  color: white;
+  letter-spacing: 2.5px;
+  font-family: sans-serif;
+  font-family: arial;
   font-size: 22px;
 }
 
-.well {
-  display: none;
-  background: none;
+#displayWell {
+  background: white;
+  color: black;
+  letter-spacing: 2.5px;
+  font-family: sans-serif;
+  font-family: arial;
+  font-size: 22px;
 }
 
-.rowTwo {
-  padding-top: 100px;
-  /*margin-top: 50px;*/
+#displayWell ul {
+  letter-spacing: 2.5px;
+  font-family: sans-serif;
+  font-family: arial;
+  font-size: 20px;
+}
+
+#displayWell h2 {
+  font-size: 35px;
 }
 
 #right-float {
